# carbon-chat

./: .gitignore  .gitmodules  .gitmodulesbackup  CMakeLists.txt  README.md  build.py  carbon_startserver.py  carbon_startserver.sh  main  main.carbon  simple_broadcast_server.cpp  start.sh
.fleet/: run.json
.github/workflows/: cmake.yml
carbon-syntax-highlighter/: INSTALL.md  package.json  vsc-extension-quickstart.md
carbon-syntax-highlighter/syntaxes/: carbon.tmLanguage.json
src/: chatclient.cpp  chatclient.h  chatserver.cpp  chatserver.h  client.py  colored_terminal.cpp  main.cpp  requirements.txt  servercommand.cpp  servercommand.h
test/: carbonchat_test.cpp  chatserver_test.cpp  testclient.cpp  testserver.cpp
